# athanor4s

./: README.md  athanor4s_repository.md  build.sbt  build.xml
core/src/main/scala/com/xerox/jatanor/: DynLoaderFromJar.scala  JAtanor.scala
java/: build.xml
native/src/: CMakeLists.txt  athanor.cxx  com_xerox_jatanor_JAtanor.h
native/src/include/: atanor.h  atanorconstants.h  atanorfloat.h  atanorglobal.h  atanorint.h  atanorstring.h  binmap.h  conversion.h  globalatanor.h  vecte.h  x_node.h
project/: plugins.sbt
src/: main  native
src/main/java/com/xerox/jatanor/: DynLoaderFromJar.java  JAtanor.java
